// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar Render all content 1`] = `
<div
  class="Bar--bar-"
  data-bar-part="Root"
>
  <div
    class="Bar--left-"
    data-bar-part="Left"
  >
    <div>
      Content Left
    </div>
  </div>
  <div
    class="Bar--center-"
    data-bar-part="Center"
  >
    <div
      class="Bar--inner-"
    >
      <div>
        Content Middle
      </div>
    </div>
  </div>
  <div
    class="Bar--right-"
    data-bar-part="Right"
  >
    <div>
      Content Right
    </div>
  </div>
</div>
`;

exports[`Bar Renders with default Props 1`] = `
<div
  class="Bar--bar-"
  data-bar-part="Root"
>
  <div
    class="Bar--left-"
    data-bar-part="Left"
  />
  <div
    class="Bar--center-"
    data-bar-part="Center"
  >
    <div
      class="Bar--inner-"
    />
  </div>
  <div
    class="Bar--right-"
    data-bar-part="Right"
  />
</div>
`;
